WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269606
[JSC] InByValMegamorphic does not need to be ObjectUse
https://bugs.webkit.org/show_bug.cgi?id=269606
Summary
[JSC] InByValMegamorphic does not need to be ObjectUse
Yusuke Suzuki
Reported
2024-02-16 13:06:26 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2024-02-16 13:06:28 PST
<
rdar://problem/123101705
>
Yusuke Suzuki
Comment 2
2024-02-16 13:07:18 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24648
EWS
Comment 3
2024-02-16 16:07:08 PST
Committed
274892@main
(a54c682f6b97): <
https://commits.webkit.org/274892@main
> Reviewed commits have been landed. Closing PR #24648 and removing active labels.
Yusuke Suzuki
Comment 4
2025-05-23 17:23:46 PDT
***
Bug 269589
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug