[JSC] InByValMegamorphic does not need to be ObjectUse https://bugs.webkit.org/show_bug.cgi?id=269606 rdar://123101705

Reviewed by Justin Michaud.

It can be just a CellUse. This patch fixes wrong assertion and use CellUse instead.
Several debug tests already cover it (e.g. stress/proxy-has-property.js)

* Source/JavaScriptCore/dfg/DFGFixupPhase.cpp:
(JSC::DFG::FixupPhase::fixupNode):
* Source/JavaScriptCore/dfg/DFGNode.cpp:
(JSC::DFG::Node::convertToInByIdMaybeMegamorphic):
* Source/JavaScriptCore/dfg/DFGSpeculativeJIT64.cpp:
(JSC::DFG::SpeculativeJIT::compileInByValMegamorphic):
* Source/JavaScriptCore/ftl/FTLLowerDFGToB3.cpp:
(JSC::FTL::DFG::LowerDFGToB3::compileCompareStrictEq):

Canonical link: https://commits.webkit.org/274892@main